School_projects/SecondYear_projects/Java_programming/Java_compiler/src/test/deca/context/invalid/OwnTests_stepB/invalid/tests_declarations/decl_sameVar_Int.deca
//déclarer deux fois une même variable
//erreur attendue : Error, type already declared in Declvar

{
    int x;
    int x = 6;
}